# hecs_issue310_reproducer

./: Cargo.toml  remove_component.py
src/: main.rs  post.json  post2.json  post3.json  pre.json  pre2.json  pre3.json
